<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">



    <Button
        android:id="@+id/aActivityBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a_activity_btn_label" />

    <Button
        android:id="@+id/bActivityBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b_activity_btn_label" />

    <Button
        android:id="@+id/singleTopBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/single_top_activity_btn_label" />

    <Button
        android:id="@+id/singleTaskBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/single_task_btn_label" />

    <Button
        android:id="@+id/singleInstanceBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/single_instance_btn_label" />

    <Button
        android:id="@+id/singleInstancePerTaskBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/single_instance_per_task_btn_label" />

</LinearLayout>