<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">


    <Button
        android:id="@+id/activityA_sameActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/same_activity_btn_label" />

    <Button
        android:id="@+id/activityA_bActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b_activity_btn_label" />

    <Button
        android:id="@+id/activityA_singleTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/single_top_activity_btn_label" />


</LinearLayout>